# agv_task

bag_files_turtlesim/rosbag2_2023_09_10-19_30_51/: metadata.yaml  rosbag2_2023_09_10-19_30_51_0.db3
bag_files_turtlesim/rosbag2_2023_09_10-19_46_52/: metadata.yaml  rosbag2_2023_09_10-19_46_52_0.db3
hb_task1a_solution_files/: hb_task_1a_3586.db3  hb_task_1a_3586.py  hb_task_1a_3586.yaml
hb_task_1b/: CMakeLists.txt  package.xml  setup.py
hb_task_1b/launch/: hb_task1b.launch.py
hb_task_1b/urdf/: hb_bot.urdf.xacro
lab1_ws/src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml
lab1_ws/src/lab1_pkg/nodes/: talker.py
lab1_ws/src/lab1_pkg_new/: CMakeLists.txt  package.xml  talker.py
my_py_pkg/: package.xml  setup.py
my_py_pkg/my_py_pkg/: add_two_ints_client.py  add_two_ints_client_no_oop.py  add_two_ints_server.py  my_first_node.py  robot_news_station.py  smartphone.py
my_robot_description/: package.xml
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro  my_robot.urdf.xacro
